# medium_clone_project

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 04165aaab39f_init_db.py  c93770f469de_create_article_table.py  f9868f06a128_add_article_and_article_status.py
app/: config.py  database.py  dependencies.py  main.py  middleware.py  tasks.py  utils.py
app/admin/: auth.py  settings.py  views.py
app/models/: article.py  user.py
app/routers/: article.py  auth.py
app/schemas/: article.py  auth.py
app/static/css/: styles.css
app/templates/: welcome.html
